Rename to Game Master

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mafia-bot",
+  "name": "game-master",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Trenton Pottruff",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0"
+  }
 }
