--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0",
-    "mongodb": "^3.5.7"
+    "dotenv": "^8.2.0"
   }
 }
