--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "moment": "^2.26.0"
+    "moment": "^2.26.0",
+    "mongodb": "^3.5.9"
   }
 }
