--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "game-master",
-  "version": "1.0.0",
+  "version": "0.4.0",
   "description": "",
-  "main": "index.js",
+  "main": "gamemaster.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon gamemaster.js"
   },
   "author": "Trenton Pottruff",
   "license": "MIT",
